Isolate as best as possible
And introduce 3 "levels":
* public API
* internal API
* resolver impl